[gd_scene format=3 uid="uid://b2kxqxvyqv3yj"]

[ext_resource type="Script" uid="uid://ddbxfqe4wgdp" path="res://scripts/player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cxqghx3vu4kcv" path="res://sprites/player.png" id="2"]
[ext_resource type="Script" uid="uid://cbsibe5xfry5c" path="res://scripts/ui/hp_bar.gd" id="3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 16.0

[node name="Player" type="CharacterBody2D" unique_id=616116333]
collision_mask = 0
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1275830916]
sprite_frames = SubResource("SpriteFrames_1")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=2087246958]
shape = SubResource("CircleShape2D_1")

[node name="HPBar" type="ProgressBar" parent="." unique_id=56278753]
offset_left = -20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 25.0
value = 100.0
show_percentage = false
script = ExtResource("3")

[node name="HurtBox" type="Area2D" parent="." unique_id=288110692]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox" unique_id=1023868562]
shape = SubResource("CircleShape2D_1")

[node name="PickupArea" type="Area2D" parent="." unique_id=1456287335]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea" unique_id=2081788350]
shape = SubResource("CircleShape2D_1")

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="body_exited" from="HurtBox" to="." method="_on_hurt_box_body_exited"]
[connection signal="body_entered" from="PickupArea" to="." method="_on_pickup_area_body_entered"]
